Addressing PR #177 comments.
https://github.com/mizool/mizool/pull/177